# code-harvest

./: .gitignore  LICENSE  README.md  harvest.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
scripts/: harvest
src/harvest/: cli.py  constants.py  core.py  httputil.py  paths.py  server.py  ui.py  watch.py
tests/integration/: test_server_meta_disk.py  test_server_no_store.py  test_watch_end_to_end.py  test_watch_serve_integration.py
tests/smoke/: test_ui_marker_present.py
tests/unit/: test_cli_commands.py  test_core_harvesting.py  test_core_skeleton.py  test_paths.py  test_server_skeleton.py  test_watch_ignore.py  test_watch_snapshot.py
