[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harvest-code"
version = "1.2.3"
description = "Harvest codebases into portable JSON + chunks for RAG and tooling"
readme = "README.md"
license = "MIT"
authors = [{name = "veyorokon", email = "veyorokon@users.noreply.github.com"}]
requires-python = ">=3.9"
dependencies = []
classifiers = [
  "Programming Language :: Python :: 3",
  "Environment :: Console"
]

[project.scripts]
harvest = "harvest.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]